--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Log Files and Debugging
 
 LOG/**
-# DEBUGGING/**
+DEBUGGING/**
 
 # bash tools
 
@@ -9,7 +9,7 @@ syncunity.txt
 
 # hidden files
 
-#.*
+# .*
 
 # <name>/ = Directory
 # *.log = all log files
